Implementando el menu

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script type="text/javascript" src="JS/menu.js"></script>
     <title>Ejercicio loles</title>
 </head>
-<body>
-<div id="1">
-    
+<body onload="menu()">
+<div id="div1" align="center">
+
 </div>
 
 </body>
