--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script type="text/javascript" src="JS/menu.js"></script>
-    <title>Ejercicio loles</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
-<body onload="menu()">
-<div id="div1" align="center">
+<body onload="crearNodosDom">
+    <div id="contenedor">
+    <script src="js/script.js"></script>
 
-</div>
+       
+
+    </div>
 
 </body>
 </html>
