--- a/Formulario Nabib/JS/JS/index.html
+++ b/Formulario Nabib/JS/JS/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     
 </head>
-<body onload="crearNodosDom">
+<body onload="crearNodosDom()">
     <div id="contenedor">
     <script src="js/script.js"></script>
 
