subido todo modificado

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/estilos1.css">
+    <link rel="stylesheet" type="text/css" href="css/estilos1.css">    
     <script type="text/javascript" src="JS/menu.js"></script>
     <script type="text/javascript" src="JS/formuCheck.js"></script>
     <script type="text/javascript" src="JS/imagenes.js"></script>
-    <!--<script type="text/javascript" src="JS/FormulariNagib.js"></script>-->
+    <script type="text/javascript" src="JS/FormulariNagib.js" ></script>
+    <script type="text/javascript" src="JS/pedro.js" ></script>
+    <script type="text/javascript" src="JS/PedroElGrande.js" ></script>
     <title>Ejercicio loles</title>
+
 </head>
 <body onload="menu()">
 <div id="div1" align="center">
